--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; width: 18em;">
+<div style="display: flex;">
     <div style="width: 13em;">{{title}}</div>
     <div style="width: 5em;">${{data}}</div>
 </div>
