--- a/src/app/results-per-person/results-per-person.component.html
+++ b/src/app/results-per-person/results-per-person.component.html
@@ -1,3 +1,3 @@
-<app-result title="Bill Per Person:" data="{{billSplit}}"></app-result>
-<app-result title="Tip Per Person:" data="{{tipSplit}}"></app-result>
-<app-result title="Total Per Person:" data="{{totalSplit}}"></app-result>
+<app-result title="Bill Per Person:" data="{{calculator.billSplit}}"></app-result>
+<app-result title="Tip Per Person:" data="{{calculator.tipSplit}}"></app-result>
+<app-result title="Total Per Person:" data="{{calculator.totalSplit}}"></app-result>
