--- a/src/app/tip-input/tip-input.component.html
+++ b/src/app/tip-input/tip-input.component.html
@@ -1,6 +1,8 @@
 <div style="display: flex; width: 18em;">
-    <div style="width: 13em;"><label for="tip">Tip (%)</label></div>
-    <select [(ngModel)]="selected" name="tip" id="tip" (ngModelChange)="emitSelected($event)">
+    <div style="width: 13em;">
+        <label for="tip">Tip (%)</label>
+    </div>
+    <select [(ngModel)]="calculator.tipPercent" name="tip" id="tip">
         <option value=0>0</option>
         <option value=10>10</option>
         <option value=15>15</option>
@@ -8,6 +10,10 @@
         <option value=-1>custom</option>
     </select>
 </div>
-<div *ngIf="selected == -1">
-    <app-number-input #customAmountInput (dataOut)="emitCustomAmount($event)" title="Custom Tip Amount ($)" id="tip_custom"></app-number-input>
-</div>
+<app-number-input
+    *ngIf="calculator.tipIsCustom"
+    [data]="calculator.tipCustomAmount"
+    (dataOut)="calculator.tipCustomAmount = $event"
+    title="Custom Tip Amount ($)"
+    inputId="tip_custom"
+></app-number-input>
